--- a/section-58.adoc
+++ b/section-58.adoc
@@ -1,82 +1,71 @@
 [#58_0]
-== ABSTRACT
-AIR RULES
+== ABSTRACT AIR RULES
 
 COMMENTARY:
 
-This Section covers the rules required for the
-Players to play the Land and Logistics Games
-without utilizing the Air Game rules. CNA's play
-is relatively unaffected by the lack of an Air Game,
-the adjustments required being made in the
-Player's "trucking”' ability.
+This Section covers the rules required for the Players to play the Land and
+Logistics Games without utilizing the Air Game rules. CNA's play is relatively
+unaffected by the lack of an Air Game, the adjustments required being made in
+the Player's "trucking”' ability.
 
 CASES:
 
 [#58_1]
-=== EFFECT ON AXIS
-NAVAL UNITS
+=== EFFECT ON AXIS NAVAL UNITS
 
-Attacks on Axis naval convoys are conducted using the same procedure listed in the Basic Logistics
-and Air Rules of the Land Game (see Section
-32.0). The only difference is that the convoy being
-attacked is now more detailed as to what it is
-transporting. Note that the Axis coastal shipping
-and both Players' tactical shipping may not be attacked.
+Attacks on Axis naval convoys are conducted using the same procedure listed in
+the Basic Logistics and Air Rules of the Land Game (see Section <<32_0>>). The
+only difference is that the convoy being attacked is now more detailed as to
+what it is transporting. Note that the Axis coastal shipping and both Players'
+tactical shipping may not be attacked.
 
 [#58_2]
-=== COMMONWEALTH
-FLEET BOMBARDMENT
+=== COMMONWEALTH FLEET BOMBARDMENT
 
-The Axis Player is entitled to make attacks on the
-Commonwealth fleet. Such attacks utilize the
-same procedure as that in the Basic Logistics and
-Air Rules described in the Land Game (see Section
-32.0).
+The Axis Player is entitled to make attacks on the Commonwealth fleet. Such
+attacks utilize the same procedure as that in the Basic Logistics and Air Rules
+described in the Land Game (see <<32_0>>).
 
 [#38_3]
 === EFFECT ON SUPPLIES
 
-There is only one restriction — the Axis Player
-loses three-quarters of all fuel actually brought into a port on the instant of its unloading (considered to be used for airplanes). This loss is incurred before any loss for evaporation is calculated.
+There is only one restriction — the Axis Player loses three-quarters of all fuel
+actually brought into a port on the instant of its unloading (considered to be
+used for airplanes). This loss is incurred before any loss for evaporation is
+calculated.
 
 [#58_4]
 === EFFECT ON TRUCKS
 
-[#58_41]*[58.41]* The Players' initial set-ups will be reduced
-by a certain number of Truck Points (those assigned or that would be assigned the task of supplying
-the air facilities).
+[#58_41]*[58.41]* The Players' initial set-ups will be reduced by a certain
+number of Truck Points (those assigned or that would be assigned the task of
+supplying the air facilities).
 
-[#58_42]*[58.42]* Both Players are subject to truck losses in
-addition to those caused by land combat. These
-losses represent the abstracted effects of strafing
-and bombing the opposing Player's trucks. The
-losses are determined in the same manner as those
-for motorization points (see Case <<32_57>>) using the
-percentage loss figures in the Abstract Motorization Point Loss Chart  <<32_59>>) but applying them to
-the Players' trucks.
+[#58_42]*[58.42]* Both Players are subject to truck losses in addition to those
+caused by land combat. These losses represent the abstracted effects of strafing
+and bombing the opposing Player's trucks. The losses are determined in the same
+manner as those for motorization points (see Case <<32_57>>) using the
+percentage loss figures in the Abstract Motorization Point Loss Chart <<32_59>>)
+but applying them to the Players' trucks.
 
-The owning Player may remove the lost Truck
-Points from any place he wishes. However, losses
-must be distributed in proportion by truck type
-and by proportion of trucks in convoy and those
-attached. Example: A Player possesses 50 Light,
-100 Medium, and 50 Heavy Truck Points
-distributed as 40 Light and 10 Medium in convoy
-and the remainder attached. If he is required to
-lose 10% of the total Truck Points, he must lose 4
-Light and 1 Medium Truck Points from those in
-convoy and 1 Light, 9 Medium, and 5 Heavy
+The owning Player may remove the lost Truck Points from any place he wishes.
+However, losses must be distributed in proportion by truck type and by
+proportion of trucks in convoy and those attached.
+
+[example]
+A Player possesses 50 Light, 100 Medium, and 50 Heavy Truck Points
+distributed as 40 Light and 10 Medium in convoy and the remainder attached. If
+he is required to lose 10% of the total Truck Points, he must lose 4 Light and 1
+Medium Truck Points from those in convoy and 1 Light, 9 Medium, and 5 Heavy
 Truck Points from those attached.
 
-[#58_43]*[58.43]* Both Players are subject to a reduction in
-their total available truck force in order to account
-for the trucks that would be carrying supplies to
-their air facilities. Both Players lose 10% (rounding fractions up) of all truck points that arrive in
-N. Africa (the instant they arrive) via the Commonwealth Truck Production Table and the Axis
-Replacement Pool. Trucks listed on the reinforcement track are not affected.
+[#58_43]*[58.43]* Both Players are subject to a reduction in their total
+available truck force in order to account for the trucks that would be carrying
+supplies to their air facilities. Both Players lose 10% (rounding fractions up)
+of all truck points that arrive in N. Africa (the instant they arrive) via the
+Commonwealth Truck Production Table and the Axis Replacement Pool. Trucks listed
+on the reinforcement track are not affected.
 
-[#58_44]*[58.44]* Abstract Truck Loss Chart
+[#58_44]*[58.44] Abstract Truck Loss Chart*
+
 (see Charts and Tables)
-
-SCENARIOS
